crates/wac-parser/tests/resolution/fail/variant-case-untyped.wac
import x: interface {
    variant v {
        a(string),
        b(u16),
        c(tuple<string, u16>),
    }
};

let i = new foo:bar { x };
